persists struct changes in swagger
